--- a/AngularCrud/src/app/employees/display-employee.component.html
+++ b/AngularCrud/src/app/employees/display-employee.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" (click)="handleClick()">
   <div class="card-header text-white bg-primary">
     {{employee.name}}
   </div>
