--- a/AngularCrud/src/app/employees/create-employee.component.html
+++ b/AngularCrud/src/app/employees/create-employee.component.html
@@ -1,4 +1,4 @@
-<form #employeeForm="ngForm" (ngSubmit)="saveEmployee()" autocomplete="off">
+<form #employeeForm="ngForm" (ngSubmit)="saveEmployee(); employeeForm.reset()" autocomplete="off">
   <div class="card">
     <div class="card-header text-white bg-primary">
       Create Employee
