--- a/AngularCrud/src/app/employees/display-employee.component.html
+++ b/AngularCrud/src/app/employees/display-employee.component.html
@@ -1,5 +1,5 @@
 <div class="card" (click)="handleClick()">
-  <div class="card-header text-white bg-primary">
+  <div class="card-header text-white bg-primary" [class.bg-success]="selectedEmployeeId === employee.id">
     {{employee.name}}
   </div>
   <div class="card-body">
