--- a/AngularCrud/src/app/employees/employee-details.component.html
+++ b/AngularCrud/src/app/employees/employee-details.component.html
@@ -1,3 +1,56 @@
-<p>
-  employee-details works!
-</p>
+<div class="card">
+  <div class="card-header text-white bg-primary">
+    {{employee.name}}
+  </div>
+  <div class="card-body">
+    <div class="col-md-10">
+      <div class="row vertical-align">
+        <div class="col-md-4">
+          <img class="imageClass" [src]="employee.photoPath">
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-6">
+              Gender</div>
+            <div class="col-md-6">
+              :{{employee.gender}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              Date of birth</div>
+            <div class="col-md-6">
+              :{{employee.dateOfBirth | date}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              Contact Preference</div>
+            <div class="col-md-6">
+              :{{employee.contactPreference}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              Phone</div>
+            <div class="col-md-6">
+              :{{employee.phoneNumber}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              Department</div>
+            <div class="col-md-6">
+              :{{employee.department}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              Active</div>
+            <div class="col-md-6">
+              :{{employee.isActive}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-footer">
+    <a class="btn btn-primary" [routerLink]="['/list',{id:employee.id}]">Back to list</a>
+    <button class="btn btn-primary float-right" (click)="getNextEmployee()">View next employee</button>
+  </div>
+</div>
