--- a/AngularCrud/src/app/employees/list-employees.component.html
+++ b/AngularCrud/src/app/employees/list-employees.component.html
@@ -1,7 +1,10 @@
+<div class="form-group">
+  <input type="text" class="form-control" placeholder="Search by name" style="width: 300px;" [(ngModel)]="searchTerm">
+</div>
 <h1 *ngIf="dataFromChild">
   {{dataFromChild.name + ' ' + dataFromChild.gender}}
 </h1>
-<div *ngFor="let employee of employees">
+<div *ngFor="let employee of filteredEmployees">
   <div (click)="onClick(employee.id)" class="pointerCursor">
     <app-display-employee [employee]="employee" (notify)="handleNotify($event)"></app-display-employee>
   </div>
