--- a/AngularCrud/src/app/employees/display-employee.component.html
+++ b/AngularCrud/src/app/employees/display-employee.component.html
@@ -49,4 +49,9 @@
       </div>
     </div>
   </div>
+  <div class="card-footer">
+    <button class="btn btn-primary" (click)="viewEmployee()">View</button>
+    <button class="btn btn-success ml-1" (click)="editEmployee()">Edit</button>
+    <button class="btn btn-danger ml-1">Delete</button>
+  </div>
 </div>
