--- a/AngularCrud/src/app/app.component.html
+++ b/AngularCrud/src/app/app.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" routerLink="list">List <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="create">Create<span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="edit/0">Create<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
