--- a/AngularCrud/src/app/employees/create-employee.component.html
+++ b/AngularCrud/src/app/employees/create-employee.component.html
@@ -1,7 +1,7 @@
 <form #employeeForm="ngForm" (ngSubmit)="saveEmployee(); employeeForm.reset()" autocomplete="off">
   <div class="card">
     <div class="card-header text-white bg-primary">
-      Create Employee
+      {{cardTitle}}
     </div>
     <div class="card-body">
       <div class="form-group">
@@ -17,14 +17,14 @@
           [class.valid-label]="contactPreference.valid">Contact Preference</label>
         <div class="form-control">
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="contactPreference" id="emailPreference" value="email"
+            <input class="form-check-input" type="radio" name="contactPreference" id="emailPreference" value="Email"
               #contactPreference="ngModel" [(ngModel)]="employee.contactPreference"
               [class.is-invalid]="contactPreference.touched && contactPreference.invalid"
               [class.is-valid]="contactPreference.valid" required>
             <label class="form-check-label" for="emailPreference">Email</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="contactPreference" id="phonePreference" value="phone"
+            <input class="form-check-input" type="radio" name="contactPreference" id="phonePreference" value="Phone"
               [(ngModel)]="employee.contactPreference" #contactPreference="ngModel"
               [class.is-invalid]="contactPreference.touched && contactPreference.invalid"
               [class.is-valid]="contactPreference.valid" required>
@@ -38,7 +38,7 @@
         <label for="email" [class.invalid-label]="email.invalid" [class.valid-label]="email.valid">Email</label>
         <input id="email" name="email" [(ngModel)]="employee.email" #email="ngModel" type="text" class="form-control"
           [class.is-invalid]="email.invalid" [class.is-valid]="email.valid"
-          [required]="contactPreference.value=='email'" email>
+          [required]="contactPreference.value=='Email'" email>
         <span class="invalid-feedback" *ngIf="email.errors?.required">Email is
           required</span>
         <span class="invalid-feedback" *ngIf="email.errors?.email && email.touched">Email is invalid
@@ -48,7 +48,7 @@
         <label for="phoneNumber" [class.invalid-label]="phoneNumber.invalid"
           [class.valid-label]="phoneNumber.valid">Phone Number</label>
         <input id="phoneNumber" name="phoneNumber" [(ngModel)]="employee.phoneNumber" type="text" class="form-control"
-          #phoneNumber="ngModel" [required]="contactPreference.value=='phone'" [class.is-invalid]="phoneNumber.invalid"
+          #phoneNumber="ngModel" [required]="contactPreference.value=='Phone'" [class.is-invalid]="phoneNumber.invalid"
           [class.is-valid]="phoneNumber.valid">
         <span class="invalid-feedback" *ngIf="phoneNumber.errors?.required">Phone number is
           required</span>
@@ -58,13 +58,13 @@
           [class.valid-label]="gender.valid">Gender</label>
         <div class="form-control">
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="gender" id="male" value="male"
+            <input class="form-check-input" type="radio" name="gender" id="male" value="Male"
               [(ngModel)]="employee.gender" #gender="ngModel" [class.is-invalid]="gender.touched && gender.invalid"
               [class.is-valid]="gender.valid" required>
             <label class="form-check-label" for="male">Male</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="gender" id="female" value="female"
+            <input class="form-check-input" type="radio" name="gender" id="female" value="Female"
               [(ngModel)]="employee.gender" #gender="ngModel" [class.is-invalid]="gender.touched && gender.invalid"
               [class.is-valid]="gender.valid" required>
             <label class="form-check-label" for="female">Female</label>
@@ -105,11 +105,11 @@
         <input id="photoPath" name="photoPath" [(ngModel)]="employee.photoPath" type="text" class="form-control">
       </div>
       <div class="form-group">
-        <button type="button" (click)="togglePhotoPreview()" class="btn btn-primary">{{previewPhoto? "Hide ": "Show "}}
+        <button type="button" (click)="togglePhotoPreview()" class="btn btn-primary" *ngIf="employee.photoPath !== '' && employee.photoPath !== null">{{previewPhoto? "Hide ": "Show "}}
           Preview</button>
       </div>
       <div class="form-group">
-        <img [src]="employee.photoPath" height="200" width="200" *ngIf="previewPhoto">
+        <img [src]="employee.photoPath" height="200" width="200" *ngIf="previewPhoto && employee.photoPath !== '' && employee.photoPath !== null">
       </div>
     </div>
     <div class="card-footer">
