--- a/AngularCrud/src/app/employees/display-employee.component.html
+++ b/AngularCrud/src/app/employees/display-employee.component.html
@@ -1,8 +1,9 @@
 <div class="card" (click)="handleClick()">
-  <div class="card-header text-white bg-primary" [class.bg-success]="selectedEmployeeId === employee.id">
+  <div class="card-header text-white bg-primary cursorPointer" [class.bg-success]="selectedEmployeeId === employee.id"
+    (click)="isHidden = !isHidden">
     {{employee.name}}
   </div>
-  <div class="card-body">
+  <div class="card-body" [hidden]="isHidden">
     <div class="col-md-10">
       <div class="row vertical-align">
         <div class="col-md-4">
@@ -29,6 +30,12 @@
           </div>
           <div class="row">
             <div class="col-md-6">
+              Email</div>
+            <div class="col-md-6">
+              :{{employee.email}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
               Phone</div>
             <div class="col-md-6">
               :{{employee.phoneNumber}}</div>
@@ -36,8 +43,14 @@
           <div class="row">
             <div class="col-md-6">
               Department</div>
-            <div class="col-md-6">
-              :{{employee.department}}</div>
+            <div class="col-md-6" [ngSwitch]="employee.departmentId">
+              <span *ngSwitchCase="1">Help Desk</span>
+              <span *ngSwitchCase="2">HR</span>
+              <span *ngSwitchCase="3">IT</span>
+              <span *ngSwitchCase="4">Payroll</span>
+              <span *ngSwitchCase="5">Admin</span>
+              <span *ngSwitchDefault>N/A</span>
+            </div>
           </div>
           <div class="row">
             <div class="col-md-6">
@@ -49,7 +62,7 @@
       </div>
     </div>
   </div>
-  <div class="card-footer">
+  <div class="card-footer" [hidden]="isHidden">
     <button class="btn btn-primary" (click)="viewEmployee()">View</button>
     <button class="btn btn-success ml-1" (click)="editEmployee()">Edit</button>
     <span *ngIf="confirmDelete" class="ml-1">
