--- a/AngularCrud/src/app/employees/employee-details.component.html
+++ b/AngularCrud/src/app/employees/employee-details.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" *ngIf="employee">
   <div class="card-header text-white bg-primary">
     {{employee.name}}
   </div>
@@ -51,6 +51,5 @@
   </div>
   <div class="card-footer">
     <a class="btn btn-primary" [routerLink]="['/list',{id:employee.id}]" queryParamsHandling="preserve">Back to list</a>
-    <button class="btn btn-primary float-right" (click)="getNextEmployee()">View next employee</button>
   </div>
 </div>
